tested forming the post body variable
